objects/Healthcare_Institution_Competitor__c.object
<CustomObject>
    <label>Klinik Wettbewerber</label>
    <nameField>
        <displayFormat>KW{00000}</displayFormat>
        <label>Klinik Wettbewerber-Nummer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klinik Wettbewerber</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Competitors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitors</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Kliniken und Praxen</relationshipLabel>
        <relationshipName>Healthcare_Institution_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single vendor</fullName>
                </value>
                <value>
                    <fullName>Preferred supplier</fullName>
                </value>
                <value>
                    <fullName>Framework contract</fullName>
                </value>
                <value>
                    <fullName>Master Vendor</fullName>
                </value>
                <value>
                    <fullName>OnSite</fullName>
                </value>
                <value>
                    <fullName>MSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_term_until__c</fullName>
        <label>Contract term until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Healthcare_Institution__c</fullName>
        <label>Healthcare Institution</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Healthcare Institution, Doctors Surgery</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Wettbewerber</relationshipLabel>
        <relationshipName>Healthcare_Institution_Competitors1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_working_Employees__c</fullName>
        <formula>Number_of_other_working_personnel__c + Number_of_working_caregivers__c + Number_of_working_doctors__c + Number_of_working_permanent_placement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total working Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_working_doctors__c</fullName>
        <label>Number of working doctors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_working_caregivers__c</fullName>
        <label>Number of working caregivers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_other_working_personnel__c</fullName>
        <label>Number of other working personnel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_working_permanent_placement__c</fullName>
        <label>Number of working permanent placements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>